[project]
name = "yw-openctp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openctp-ctp>=6.7.11.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
timeout = 30
